# cpp-mem

./: ChangeLog  Makefile.am  README  bootstrap  configure.ac
include/: Makefile.am  trm_memsys.h
include/trm/: memsys.h
src/: Makefile.am  chisqr.f  memcore.f  memedit.f  memsys.cc  mover.f  test.cc  test.f  test1.cc  testf.f
