## Process this file with automake to generate Makefile.in
##
## This is the file that must be edited if you are changing anything in the source directory

AM_CPPFLAGS = -I../include

LDADD = libmem.la

## Library

lib_LTLIBRARIES = libmem.la

libmem_la_SOURCES = memsys.cc

libmem_la_LDFLAGS = -version-info 1:0:0


